--- a/notebooks/pyEDM Version 0.ipynb
+++ b/notebooks/pyEDM Version 0.ipynb
@@ -20,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EDM.dataFrameIn = EDM.read_csv('../data/Lorenz5D.csv') # Press Data -> Import"
+    "# To load an external Pandas DataFrame, assign it to EDM.dataFrameIn, Press Data -> Import\n",
+    "# EDM.dataFrameIn = EDM.read_csv('../data/Lorenz5D.csv')"
    ]
   },
   {
@@ -30,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EDM.dataFrameOut['coefficients']"
+    "# To access the EDM return object, reference EDM.dataFrameOut\n",
+    "# EDM.dataFrameOut['coefficients']"
    ]
   },
   {
