--- a/notebooks/pyEDM Version 0.ipynb
+++ b/notebooks/pyEDM Version 0.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "id": "contemporary-rugby",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# To access the EDM return object, reference EDM.dataFrameOut\n",
-    "# EDM.dataFrameOut['coefficients']"
+    "# EDM.dataFrameOut['predictions']"
    ]
   }
  ],
