exclusionRadius & validLib for Eval functions

--- a/notebooks/pyEDM Version 0.ipynb
+++ b/notebooks/pyEDM Version 0.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "id": "contemporary-rugby",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
