--- a/notebooks/pyEDM Version 0.ipynb
+++ b/notebooks/pyEDM Version 0.ipynb
@@ -2,26 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "contemporary-rugby",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b4544578d6b4486b2a4ecdb8d9051b0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(VBox(children=(Dropdown(description='method', index=9, options=('Simplex', 'SMap…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib notebook\n",
     "from jpyEDM_init import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "naval-vermont",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To load an external Pandas DataFrame, assign it to EDM.dataFrameIn, Press Data -> Import\n",
-    "# EDM.dataFrameIn = EDM.read_csv('../data/Lorenz5D.csv')"
    ]
   },
   {
