--- a/notebooks/jpyEDM-0.9.ipynb
+++ b/notebooks/jpyEDM-0.9.ipynb
@@ -4,12 +4,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "contemporary-rugby",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib ipympl\n",
     "from jpyEDM_init import *"
    ]
   },
@@ -41,7 +39,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
